--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cnu-bolierplate",
+  "name": "tickify",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,15 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@clerk/nextjs": "^5.0.8",
+    "@edgestore/react": "^0.1.6",
+    "@edgestore/server": "^0.1.6",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -45,22 +51,27 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.0.4",
     "embla-carousel-react": "^8.0.4",
+    "heic2any": "^0.0.4",
     "input-otp": "^1.2.4",
     "kysely": "^0.27.3",
     "lucide-react": "^0.378.0",
     "ms": "^2.1.3",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "prisma-kysely": "^1.8.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
     "react-resizable-panels": "^2.0.19",
+    "sharp": "^0.33.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
@@ -72,6 +83,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
